--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,12 @@
     <dimen name="padding_12dp">12dp</dimen>
     <dimen name="padding_16dp">16dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
-    <dimen name="dimens_28dp">28dp</dimen>
-    <dimen name="text_16sp">16sp</dimen>
+    <dimen name="width_28dp">28dp</dimen>
+    <dimen name="main_label_error">16sp</dimen>
     <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="item_desc_text">14sp</dimen>
+    <dimen name="item_title_text">22sp</dimen>
+    <dimen name="height_28dp">height_28dp</dimen>
+    <dimen name="padding_32dp">32dp</dimen>
 </resources>
