--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/ivMoviePoster"
+            android:id="@+id/ivImage"
             android:layout_width="150dp"
             android:layout_height="225dp"
             android:scaleType="fitStart"
