--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,6 @@
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="item_desc_text">14sp</dimen>
     <dimen name="item_title_text">22sp</dimen>
-    <dimen name="height_28dp">height_28dp</dimen>
+    <dimen name="height_28dp">28dp</dimen>
     <dimen name="padding_32dp">32dp</dimen>
 </resources>
