--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/srlRefresh"
-        android:layout_below="@+id/pbLinearProgress"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/pbLinearProgress">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMovies"
@@ -47,9 +47,9 @@
     <ProgressBar
         android:id="@+id/pbLinearProgress"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_below="@+id/etSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/etSearch"
         android:layout_gravity="top"
         android:progressTint="@color/blue"
         tools:progress="35" />
