--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -27,7 +27,8 @@
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
-                android:layout_height="55dp"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
                 android:textSize="@dimen/item_title_text"
                 android:textStyle="bold"
                 android:visibility="visible"
@@ -36,7 +37,8 @@
             <TextView
                 android:id="@+id/tvDescription"
                 android:layout_width="wrap_content"
-                android:layout_height="130dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:lineSpacingExtra="4dp"
                 android:paddingTop="@dimen/padding_8dp"
                 android:textSize="@dimen/item_desc_text"
@@ -47,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="@dimen/padding_8dp"
+                android:padding="@dimen/padding_8dp"
                 android:paddingTop="@dimen/padding_8dp"
                 android:textSize="@dimen/item_desc_text"
                 app:drawableEndCompat="@drawable/ic_heart"
