--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
         android:drawablePadding="@dimen/padding_16dp"
         android:hint="@string/search_hint"
         android:imeOptions="actionDone"
+        android:inputType="text"
         android:paddingStart="@dimen/padding_12dp"
         android:paddingEnd="@dimen/padding_16dp"
-        android:singleLine="true"
-        android:inputType="text" />
+        android:singleLine="true" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/srlRefresh"
@@ -45,7 +45,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:indeterminate="true"
-        android:indeterminateTint="@color/blue" />
+        android:indeterminateTint="@color/blue"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/pbLinearProgress"
@@ -55,6 +56,7 @@
         android:layout_below="@+id/etSearch"
         android:layout_gravity="top"
         android:progressTint="@color/blue"
+        android:visibility="gone"
         tools:progress="35" />
 
     <LinearLayout
@@ -63,7 +65,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -89,7 +92,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -117,5 +121,6 @@
         android:layout_marginBottom="@dimen/margin_16dp"
         android:backgroundTint="@color/blue"
         android:src="@drawable/ic_refresh_arrow"
-        android:tint="@color/white" />
+        android:tint="@color/white"
+        android:visibility="gone" />
 </RelativeLayout>
