--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -44,17 +44,37 @@
                 android:textSize="@dimen/item_desc_text"
                 tools:text="Here will be description of movie and some spoilers for ... will be description of movie and some spoilers for " />
 
-            <TextView
-                android:id="@+id/tvDate"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/padding_8dp"
-                android:padding="@dimen/padding_8dp"
-                android:paddingTop="@dimen/padding_8dp"
-                android:textSize="@dimen/item_desc_text"
-                app:drawableEndCompat="@drawable/ic_heart"
-                app:drawableStartCompat="@drawable/ic_calendar"
-                tools:text="1 августа 2023" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/padding_8dp"
+                    android:padding="@dimen/padding_8dp"
+                    android:paddingTop="@dimen/padding_8dp"
+                    android:textSize="@dimen/item_desc_text"
+                    app:drawableStartCompat="@drawable/ic_calendar"
+                    tools:text="1 августа 2023" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:id="@+id/ivFavorite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/padding_8dp"
+                    android:gravity="end"
+                    android:src="@drawable/ic_heart" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
