--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,11 +75,11 @@
             android:src="@drawable/ic_big_search" />
 
         <TextView
+            android:id="@+id/tvNotFound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="@dimen/padding_32dp"
-            android:text="@string/not_found"
             android:textColor="@color/white"
             android:textSize="@dimen/main_label_error" />
 
