--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:padding="@dimen/padding_32dp"
             android:textColor="@color/white"
             android:textSize="@dimen/main_label_error" />
@@ -102,6 +103,7 @@
             android:src="@drawable/ic_alert" />
 
         <TextView
+            android:id="@+id/tvError"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
