--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,15 +118,16 @@
         android:indeterminateTint="@color/blue"
         android:visibility="gone" />
 
-    <ProgressBar
+    <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/pbLinearProgress"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="8dp"
         android:layout_below="@+id/etSearch"
         android:layout_gravity="top"
+        android:indeterminate="true"
         android:progressTint="@color/blue"
-        android:visibility="gone"
-        tools:progress="35" />
+        android:visibility="visible"
+        tools:progress="35"
+        app:indicatorColor="@color/blue" />
 
 </RelativeLayout>
