--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -49,19 +49,24 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/padding_8dp"
+                    android:paddingEnd="@dimen/padding_8dp"
+                    android:src="@drawable/ic_calendar" />
+
                 <TextView
                     android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawablePadding="@dimen/padding_8dp"
-                    android:padding="@dimen/padding_8dp"
                     android:paddingTop="@dimen/padding_8dp"
                     android:textSize="@dimen/item_desc_text"
-                    app:drawableStartCompat="@drawable/ic_calendar"
                     tools:text="1 августа 2023" />
 
                 <Space
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
@@ -69,12 +74,11 @@
                     android:id="@+id/ivFavorite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/padding_8dp"
+                    android:padding="@dimen/padding_8dp"
                     android:gravity="end"
                     android:src="@drawable/ic_heart" />
 
             </LinearLayout>
-
 
         </LinearLayout>
 
